crates/snapshot-tests/tests/snapshots/parser__stray_cr__array_value.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[Unexpected]: unexpected character found: `\r` at `a[0]`
  ┌─ array_value:1:7
  │
1 │ a = [  ]
  │        unexpected character '\r'


error: unexpected character found: `\r` at `a[0]`
 --> array_value:1:7
  |
1 | a = [ ␍ ]
  |       ^ unexpected character '\r'
Error {
    kind: "Unexpected",
    message: "unexpected character found: `\\r`",
    span: 6..7,
    path: Some(
        "a[0]",
    ),
}
