crates/snapshot-tests/tests/snapshots/parser__stray_cr__ml_basic.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidCharInString]: invalid character in string: `\r`
  ┌─ ml_basic:1:4
  │
1 │ """"""
  │     invalid character '\r' in string


error: invalid character in string: `\r`
 --> ml_basic:1:4
  |
1 | """␍"""
  |    ^ invalid character '\r' in string
Error {
    kind: "InvalidCharInString",
    message: "invalid character in string: `\\r`",
    span: 3..4,
    path: None,
}
