crates/snapshot-tests/tests/snapshots/parser__stray_cr__ml_basic2.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidCharInString]: invalid character in string: `\r`
  ┌─ ml_basic2:1:4
  │
1 │ ''''''
  │     invalid character '\r' in string
