crates/snapshot-tests/tests/snapshots/parser__stray_cr__ml_more_whitespace.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidCharInString]: invalid character in string: `\r`
  ┌─ ml_more_whitespace:1:6
  │
1 │ """    """
  │       invalid character '\r' in string
