crates/snapshot-tests/tests/snapshots/parser__stray_cr__value_str.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidCharInString]: invalid character in string: `\r` at `a`
  ┌─ value_str:1:6
  │
1 │ a = ""
  │       invalid character '\r' in string


error: invalid character in string: `\r` at `a`
 --> value_str:1:6
  |
1 | a = "␍"
  |      ^ invalid character '\r' in string
Error {
    kind: "InvalidCharInString",
    message: "invalid character in string: `\\r`",
    span: 5..6,
    path: Some(
        "a",
    ),
}
